<resources>
    <string name="app_name">Student Attendance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="add_student">Add Student</string>
    <string name="add_degree">Add Degree</string>
    <string name="add_group">Add Group</string>
    <string name="add_courses">Add Course</string>
    <string name="attendance">Attendance</string>
    <string name="degree_name">Degree name</string>
    <string name="degree_duration">Duration of the degree</string>
    <string name="spinnerPrompt">Chose the degree</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_statistics">Statistics</string>
    <string name="check_attendance">Attendance Criteria</string>
    <string name="submit_text">submit</string>
    <string name="enter_name">Full Name</string>
    <string name="save_button">Save</string>
    <string name="profile_update_info">Update profile information</string>
    <string name="export_data">Export attendance data</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone">Phone Number</string>
    <string name="enter_group">Enter a group</string>
    <string name="enter_course">Enter a course</string>
    <string name="change_picture">Change profile picture</string>
    <string name="log_out">Log out</string>

</resources>
