<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:text="@string/profile_update_info"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/user_profileName"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:hint="@string/enter_name"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/user_profileEmail"
                android:inputType="textEmailAddress"
                android:layout_below="@id/user_profileName"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:hint="@string/enter_email"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/user_profilePhoneNumber"
                android:layout_below="@id/user_profileEmail"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_phone"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/progressBarUpdateInfo"
                style="?android:attr/progressBarStyle"
                android:layout_marginTop="20dp"
                android:layout_below="@id/user_profilePhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
               />

            <Button
                android:id="@+id/save_InfoButton"
                android:layout_below="@id/progressBarUpdateInfo"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:background="@color/titu"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>