<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="30dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_degree"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/degreeNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:hint="@string/degree_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/degreeDurationInput"
            android:layout_width="match_parent"
            android:inputType="number"
            android:hint="@string/degree_duration"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/degreeNameInput"
            android:autofillHints="ex. 3" />


        <Button
            android:id="@+id/addGroup"
            android:layout_width="350dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/degreeDurationInput"
            android:layout_marginTop="20dp"
            android:background="@drawable/popup_button_theme"
            android:fontFamily="sans-serif-light"
            android:padding="15dp"
            android:text="Add Group"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/addCourse"
            android:layout_width="350dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/addGroup"
            android:layout_marginTop="10dp"
            android:background="@drawable/popup_button_theme"
            android:fontFamily="sans-serif-light"
            android:padding="15dp"
            android:text="Add Course"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />


        <ProgressBar
            android:id="@+id/progressBar_AddDegree"
            style="?android:attr/progressBarStyle"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_below="@id/addCourse"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/saveDegreeButton"
            android:layout_width="350dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar_AddDegree"
            android:layout_marginTop="30dp"
            android:background="@drawable/popup_button_theme"
            android:fontFamily="sans-serif-light"
            android:padding="15dp"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>